--- a/philwhere.ffmpeg.gui/philwhere.ffmpeg.gui.csproj
+++ b/philwhere.ffmpeg.gui/philwhere.ffmpeg.gui.csproj
@@ -4,6 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+	<PlatformTarget>x64</PlatformTarget>
+	<ApplicationIcon>ffmpeg.ico</ApplicationIcon>
   </PropertyGroup>
 
 </Project>
