--- a/philwhere.ffmpeg.gui/philwhere.ffmpeg.gui.csproj
+++ b/philwhere.ffmpeg.gui/philwhere.ffmpeg.gui.csproj
@@ -9,4 +9,8 @@
 	<ApplicationIcon>ffmpeg.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="morelinq" Version="4.0.0" />
+  </ItemGroup>
+
 </Project>
